# confltr

./: CMakeLists.txt
src/: main.cpp
